# Android-OCR-Gemma3n

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts  test_local.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Gemma3nEngine.cpp  Gemma3nEngine.h  Tokenizer.h  gemma3n-jni.cpp
app/src/main/java/com/example/gemma3n_ocr/: Gemma3nClient.kt  ImageProcessor.kt  MainActivity.kt  ReceiptModel.kt  ResultPostProcessor.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
